--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/jodit/es2021/jodit.min.css"
             ],
             "scripts": []
           },
